--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -52,7 +52,38 @@
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toBottomOf="@+id/textSingle" />
-
+		<com.allen.library.shape.ShapeTextView
+			android:id="@+id/tvNoMember"
+			android:layout_width="200dp"
+			android:layout_height="64dp"
+			android:text="非会员结算"
+			android:textSize="25dp"
+			android:textColor="#FF666666"
+			android:gravity="center"
+			app:shapeCornersRadius="32dp"
+			app:shapeStrokeColor="#ffeeeeee"
+			app:shapeStrokeWidth="1dp"
+			android:lineSpacingExtra="35dp"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintLeft_toLeftOf="parent"
+			android:layout_marginBottom="72dp"
+			android:layout_marginStart="30dp"
+			/>
+		<androidx.appcompat.widget.AppCompatTextView
+			android:layout_width="200dp"
+			android:layout_height="64dp"
+			android:text="结算"
+			android:textSize="25dp"
+			android:textColor="@color/base_white"
+			android:gravity="center"
+			drawable_radius="@{32}"
+			drawable_solidColor="@{0xff0071FF}"
+			android:lineSpacingExtra="35dp"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintRight_toRightOf="parent"
+			android:layout_marginBottom="72dp"
+			android:layout_marginEnd="30dp"
+			/>
 
 	</androidx.constraintlayout.widget.ConstraintLayout>
 
